Added comments for style.css (per section)

--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
 
 
 	<!-- Contact Start -->
-	<div class="contactme container" id="contact">
+	<div class="contactUs container" id="contact">
 		<h5>CONTACT ME</h5>
 		<h2>Have something in mind? Let's Connect!</h2>
 		<!-- Thematic Break -->
@@ -60,7 +60,7 @@
 		<div class="row">
 			<!-- Left Column: Contact Us -->
             <div class="col-xs-12 col-md-12 col-lg-6 p-2">
-            <h2 class="text-center" id="contactText1">Contact Us</h2>
+            <h2 class="text-center" id="contactUsTitle">Contact Us</h2>
             	<form>
                 	<!-- Name -->
                     <div class="form-group">
