--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
 
 	<!-- Testimonials Start -->
-	<div class="testiclass container" id="testimonials">
+	<div class="clientsTestimonials container" id="testimonials">
 		<h5>TESTIMONIALS</h5>
 		<h2>Hear it directly from my clients.</h2>
 			<div class="feedback row">
