Modified services' description

--- a/index.html
+++ b/index.html
@@ -127,17 +127,17 @@
 		    <div class="col-xs-12 col-md-12 col-lg-6">
 		        <div class="card">
 		          <div class="card-block">
-		            <i class="fas fa-code float-left fa-3x p-5"></i>
-		            <h4 class="card-title p-3">Full-Stack Development</h4>
-		            <p class="card-text">Experience in building scalable solutions with front-end and back-end frameworks and database management.</p>
+		            <i class="fas-icon fas fa-code float-left fa-3x p-5"></i>
+		            <h4 class="card-title">Full-Stack Development</h4>
+		           <p class="card-text">Offers world class full-stack development solution to both large and small businesses unleash the full potential of their business.</p>
 		          </div>
 		        </div>
 
 		        <div class="card">
 		          <div class="card-block">
-		            <i class="fas fa-window-restore float-left fa-3x p-5"></i>
-		            <h4 class="card-title p-3">Application Maintenance</h4>
-		            <p class="card-text">Provides convenient, on-demand app maintenance services and development services.</p>
+		            <i class="fas fa-cogs float-left fa-3x p-5"></i>
+		            <h4 class="card-title">Application Maintenance</h4>
+		            <p class="card-text">Designed to ensure that applications are highly available, reliable, and relevant to evolving business needs.</p>
 		          </div>
 		        </div>
 		    </div>
@@ -146,17 +146,17 @@
 		    <div class="col-xs-12 col-md-12 col-lg-6">
 		        <div class="card">
 		          <div class="card-block">
-		            <i class="fas fa-file-code float-left fa-3x p-5"></i>
-		            <h4 class="card-title p-3">Quality Assurance Testing</h4>
-		            <p class="card-text">Brings the most reliable expertise, processes, technologies, and QA testing specialists.</p>
+		            <i class="fas fa-user-check float-left fa-3x p-5"></i>
+		            <h4 class="card-title">Quality Assurance Testing</h4>
+		            <p class="card-text">Offers wide range of QA testing services, and implement the best possible methodologies and applications.</p>
 		          </div>
 		        </div>
 
 		        <div class="card">
 		          <div class="card-block">
-		            <i class="fas fa-database float-left fa-3x p-5"></i>
-		            <h4 class="card-title p-3">Web Hosting</h4>
-		            <p class="card-text">Reliable website hosting, email, and affordable domain prices.</p>
+		            <i class="fas fa-laptop float-left fa-3x p-5"></i>
+		            <h4 class="card-title">Web Hosting</h4>
+		            <p class="card-text">Grow your business with efortless site hosting that provides solutions with high-availability and dedicated services.</p>
 		          </div>
 		        </div>
 		    </div>
