Modified portfolio's description

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
 				<div class="order-sm-2 col-md-6">
 					<img src="images/abstract-image.png" class="img-fluid">
 				</div>
+				<!-- Animated TypeWrite -->
+				
+
+
 				<!-- First Column (col-md = Last Order) -->
 				<div class="col-md-6">
 					<h1>Hey, I'm a Full-Stack Web Developer.</h1>
@@ -184,7 +188,7 @@
 				<img src="images/vet-app.png" class="img-fluid">
 			</div>
 			<div class="col-md-7">
-				<h2 class="featurette-heading">MyVet PH <span class="text-muted">A Mobile Application made in React JS.</span></h2>
+				<h2 class="featurette-heading">MyVet PH <span class="text-muted">A Mobile Application made in React JS</span></h2>
 				<p class="lead">MyVetPH is a mobile application that allows you to asily schedule and track your vet visits. MyVet PH efficiently connects pet owners to accredited veterinary clinics.</p>
 				    <button type="button" class="btn btn-outline-primary"><a href="https://gitlab.com/reneikthrn-zuitt-projects/b145/s10" target="_blank">Live Demo</a></button>
 			</div>
@@ -195,7 +199,7 @@
 				<img src="images/disaster-app.jpg" class="img-fluid">
 			</div>
 			<div class="col-md-7 order-md-2">
-				<h2 class="featurette-heading">e-SALBA <span class="text-muted">A Cloud-Based Mobile and Web Application.</span></h2>
+				<h2 class="featurette-heading">e-SALBA <span class="text-muted">A Cloud-Based Mobile and Web Application</span></h2>
 				<p class="lead">Emergency Disaster Rescue Operations for Households and Local Government Units in the Philippines.</p>
 				    <button type="button" class="btn btn-outline-primary" target="_blank">Live Demo</button>
 			</div>
